--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: contact@justinechacko.in
 description: > # this means to ignore newlines until "baseurl:"
   Career guidance.
 baseurl: "" 
-url: "" 
+url: "http://career.justinechacko.in" 
 
 # Build settings
 markdown: kramdown
